--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,6 +7,9 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.frontController.prefixDefaultModule = true 
+resources.modules=[]
 
 [staging : production]
 
@@ -18,3 +21,4 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+resources.frontController.baseUrl = "/zs/public"
