Integrated the Flynsarmy / PHPWebSocket-Chat : Will implement the OOP concept soon.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,6 +11,8 @@ resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.prefixDefaultModule = true 
 resources.modules=[]
 
+autoloaderNamespaces[] = "Pws"
+
 [staging : production]
 
 [testing : production]
