--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,7 +9,8 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.prefixDefaultModule = true 
-resources.modules=[]
+resources.modules = []
+resources.view = [] 
 
 autoloaderNamespaces[] = "Pws"
 
