Views initialized and dispatcher code imporeved for better performance. still plugin development left - UNSABLE MODE

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,9 +5,10 @@ includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.frontController.prefixDefaultModule = true 
 resources.modules = []
 resources.view = [] 
