--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -25,4 +25,4 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-resources.frontController.baseUrl = "/zs/public"
+resources.frontController.baseUrl = "/zsc/public"
